# npr

./: CLAUDE.md  README.md  pyproject.toml
src/npr/: __init__py  cli.py
templates/project/: Makefile  README.md
