[project]
name = "npr"
version = "0.1.0"
description = "New Project Initializer - CLI tool for creating project directories with various tools"
authors = [{name = "Miklós Koren", email = "miklos.koren@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "jinja2>=3.1.4",
]

[project.scripts]
npr = "npr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npr"]

[tool.hatch.build.targets.wheel.sources]
"templates" = "npr/templates"
